# trace-ui-for-ai

./: .gitignore  AssemblyCodeDumper.java  Cargo.toml  LICENSE  README.md  build.rs  build.sh  example-trace-gumtrace.txt  install.sh  tauri.conf.json
.github/workflows/: release.yml
capabilities/: default.json
docs/: kanxue-article.md
icons/: icon.icns
src/: cache.rs  line_index.rs  main.rs  output.rs  phase2.rs  state.rs
src-web/: index.html  package-lock.json  package.json  vite.config.ts
src-web/src/: App.tsx  FloatingPanel.tsx  FloatingSession.tsx  main.tsx
src-web/src/components/: ConfirmDialog.tsx  ContextMenu.tsx  CryptoPanel.tsx  CustomScrollbar.tsx  DependencyTreePanel.tsx  DisasmHighlight.tsx  FileTabBar.tsx  FloatingWindowFrame.tsx  FunctionListPanel.tsx  FunctionTree.tsx  GotoOverlay.tsx  MemoryPanel.tsx  MenuDropdown.tsx  Minimap.tsx  PreferencesDialog.tsx  RegisterPanel.tsx  SearchBar.tsx  SearchResultList.tsx  StringDetailPanel.tsx  StringXRefsPanel.tsx  (+7 more)
src/commands/: browse.rs  cache.rs  call_tree.rs  crypto.rs  def_use.rs  file.rs  functions.rs  index.rs  memory.rs  mod.rs  registers.rs  search.rs  slice.rs  strings.rs  utils.rs
src/flat/: archives.rs  bitvec.rs  cache_format.rs  convert.rs  deps.rs  line_index.rs  mem_access.rs  mem_last_def.rs  mod.rs  pair_split.rs  reg_checkpoints.rs  scan_view.rs
src/taint/: call_tree.rs  chunk_scan.rs  def_use.rs  dep_tree.rs  gumtrace_parser.rs  insn_class.rs  mem_access.rs  merge.rs  mod.rs  parallel.rs  parallel_types.rs  parser.rs  reg_checkpoint.rs  scanner.rs  slicer.rs  strings.rs  types.rs
(+27 files in other folders)
